--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CopyandPay Playground</title>
   </head>
-  <body>
+  <body class="bg-slate-50">
     <div>
       <div id="app"></div>
       <script type="module" src="/src/main.ts"></script>
