--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/playground.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CopyandPay Playground</title>
+
+    <!-- sadly jQuery -->
+    <script src="/jquery-3.6.4.min.js"></script>
   </head>
-  <body class="bg-slate-50">
+  <body class="bg-primary">
     <div>
       <div id="app"></div>
+
       <script type="module" src="/src/main.ts"></script>
     </div>
   </body>
