minor adjustments, added keyboard shortcuts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/playground.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CopyandPay Playground</title>
+    <title>COPYandPAY - Playground</title>
 
     <!-- sadly jQuery -->
     <script src="/jquery-3.6.4.min.js"></script>
