--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- sadly jQuery -->
     <script src="/jquery-3.6.4.min.js"></script>
   </head>
-  <body class="bg-gray-900">
+  <body class="bg-gradient-to-r from-slate-800 to-slate-900">
     <div>
       <div id="app"></div>
 
