--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="scroll-smooth" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/playground.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COPYandPAY - Playground</title>
+    <title>COPYandPAY | Playground</title>
 
     <!-- sadly jQuery -->
     <script src="/jquery-3.6.4.min.js"></script>
   </head>
-  <body class="bg-gradient-to-r from-slate-900 to-black">
+  <body class="bg-slate-300">
     <div>
       <div id="app"></div>
 
